# Karkotaka

./: .gitignore  Cargo.toml  README.md
examples/: play.rs
src/: main.rs
src/core/: mod.rs  search.rs
src/core/painter/: build.rs  font.rs  image_utils.rs  main.rs  mod.rs  paint.rs
src/core/plug/: llm.rs
src/core/primary/: author.rs  body.rs  domain.rs  headline.rs  headshot.rs  mod.rs  story.rs  synopsis.rs
src/core/secondary/: image.rs  misc.rs  mod.rs  paragraph.rs  report.rs
src/core/utils/: endpoints.rs  error.rs  handlers.rs  mod.rs  persistence.rs
