[package]
name = "Karkotaka"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1


[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["query", "ws", "macros"] }
chrono = { version = "0.4.39", features = ["serde"] }
parking_lot = { version = "0.12.3", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
surrealdb = "2.1.4"
tokio = { version = "1.43.0", features = ["full"] }
ulid = { version = "1.1.4", features = ["serde"] }
