[package]
name = "karkotaka"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[[example]]
name = "play"
path = "examples/play.rs"


[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["query", "ws", "macros"] }
axum-login = "0.17.0"
chrono = { version = "0.4.39", features = ["serde"] }
cosmic-text = "0.12.1"
image = "0.25.5"
parking_lot = { version = "0.12.3", features = ["serde"] }
rand = "0.9.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
surrealdb = "2.1.4"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.13.1", features = ["serde", "v4"] }
